launchpad-buildd (150) UNRELEASED; urgency=medium

  * Tell LXD to disable seccomp on powerpc, since it doesn't work there on
    Linux 4.4.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 05 Sep 2017 10:41:55 +0100

launchpad-buildd (149) xenial; urgency=medium

  * Clamp the TCP MSS on the LXD bridge interface to the path MTU, to avoid
    problems in environments where the path MTU is lower than 1500.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 01 Sep 2017 13:51:38 +0100

launchpad-buildd (148) xenial; urgency=medium

  * Move the contents of /usr/share/launchpad-buildd/slavebin/ into bin/ in
    the source package, to keep things a bit more organised.
  * Run tests at build time, now that python-txfixtures is in
    ppa:launchpad/ubuntu/ppa (and >= zesty).
  * Drop qemu emulation support.  It was quite unreliable, and we've had
    real hardware for a while.
  * Remove most architecture hardcoding from lpbuildd.util, relying on
    dpkg-architecture instead.
  * Use bzr's command-line interface rather than bzrlib, to ease porting to
    Python 3.
  * Rewrite update-debian-chroot in Python, allowing it to use lpbuildd.util
    and to have unit tests.
  * Rewrite override-sources-list in Python, allowing it to have unit tests.
  * Rewrite add-trusted-keys in Python, allowing it to have unit tests.
  * Configure sbuild to use schroot sessions rather than sudo.
  * Rewrite unpack-chroot and remove-build in Python, allowing them to have
    unit tests.
  * Rewrite mount-chroot and umount-chroot in Python, allowing them to have
    unit tests.
  * Rewrite scan-for-processes in Python, allowing it to have unit tests.
  * Improve "RUN:" log messages to be copy-and-pasteable as shell commands,
    which is sometimes useful while debugging.
  * Convert buildlivefs to the new Operation framework and add unit tests.
  * Convert buildsnap to the new Operation framework and add unit tests.
  * Add a LXD backend.
  * Switch snap builds to the LXD backend.